# SpanSample

./: .gitignore  Program.cs  README.md  SpanSample.csproj
dll/: CMakeLists.txt  build_windows.ps1  sample.cpp  sample.h
