CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0)
PROJECT(Sample VERSION 0.1.0)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release/bin)

FILE(GLOB SRC
    *.cpp
    *.h
    ) 
ADD_LIBRARY(${PROJECT_NAME} SHARED 
    ${SRC}
    )
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE 
    )

TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} 
    PRIVATE SAMPLE_BUILD=1
    )
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    )
